Fixed #1: Podcast menu no longer stretches w/title
 Use flexbox column in .episode-header

--- a/web/static/app/modules/_episode.sass
+++ b/web/static/app/modules/_episode.sass
@@ -16,6 +16,9 @@
 
     &_header
         max-width: 100%
+        display: flex
+        flex-direction: column
+        align-items: center
 
         & > img
             width: 12.5rem
